Experiments with smoothing and reranking

--- a/notebooks/Generation inspection.ipynb
+++ b/notebooks/Generation inspection.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "9b2f1ad7-a739-4c19-9cd5-414f188245aa",
    "metadata": {
     "tags": []
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "f479c1c0-ebd4-4ee8-819f-a7d795e71233",
    "metadata": {},
    "outputs": [],
@@ -365,6 +365,7 @@
     "\n",
     "import torch\n",
     "from torch.nn import CrossEntropyLoss\n",
+    "from torch.nn.functional import softmax, log_softmax\n",
     "\n",
     "class LabelSmoothingLogitsProcessor(LogitsProcessor):\n",
     "    source_tokens = None\n",
@@ -374,9 +375,20 @@
     "        self.smoothing_factor = smoothing_factor\n",
     "    \n",
     "    def __call__(self, input_ids, scores):\n",
-    "        return scores + self.smoothing_factor\n",
+    "        # Smoothing in probability space\n",
+    "        # scores = softmax(scores, dim=-1)\n",
+    "        # scores = torch.clamp(scores, max=self.smoothing_factor)\n",
+    "        # scores = (scores / scores.sum(dim=1).view(-1, 1))\n",
+    "        # scores = torch.log(scores)\n",
     "\n",
-    "ls_logits_proc = LabelSmoothingLogitsProcessor(200)"
+    "        # Smoothing in logit space\n",
+    "        scores = torch.clamp(scores, max=-self.smoothing_factor)\n",
+    "\n",
+    "        # print(torch.max(scores))\n",
+    "        # print(torch.max(scores, dim=1)[0])\n",
+    "        # print(torch.clamp(scores, max=-0.5))\n",
+    "        # return scores + self.smoothing_factor\n",
+    "        return scores"
    ]
   },
   {
@@ -17498,6 +17510,7 @@
    "cell_type": "markdown",
    "id": "b84b9958-bd44-4cb2-9e2f-5aaf3b71c82f",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -17957,7 +17970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 283,
    "id": "99f7d75b-5af3-4909-9133-692ff7cfb29e",
    "metadata": {},
    "outputs": [],
@@ -17975,58 +17988,72 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1c74b48d48f4242b95e5e529bf964ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "('།ཨ་སོགས་རྣམས་ནི་གཙུག་ཏོར་འཁོར་ལོ་སྙིང་མགྲིན་མགོ་བོ་ལྟེ་བའི་འཁོར་ལོ་དག་ལ་རིམ་པ་སྟེ། །སྣ་ཚོགས་གནག་དམར་རི་བོང་ཅན་དང་གསེར་འདྲ་ཕུང་པོ་ཁམས་ཀྱི་ལྷག་པའི་ལྷ་དང་ལྡན་པ་ལའོ།',\n",
-       " ['homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha together with a great sangha of sixty-four thousand monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in rajagrhas bamboo grove, together with a great sangha of sixty-four thousand monks',\n",
-       "  'homage to all buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha, together with a great sangha of sixty-four thousand monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha together with a great sangha of sixty-two thousand monks',\n",
-       "  'homage to all buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha, together with a great sangha of sixty-two thousand monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak mountain in rajagrha, together with a great sangha of five hundred monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha, together with a great sangha of five hundred monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak mountain in rajagrha, together with a great sangha of, monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak in rajagrha, together with a great sangha of five hundred monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak mountain in rajagrha together with a great sangha of, monks,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha, together with a great sangha of, monks,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha together with a great sangha of five hundred monks,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain, together with a great sangha of sixty-four thousand monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha, together with a great sangha of, monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha together with a great sangha of, monks,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha, together with a great sangha of five hundred monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak in rajagrha, together with a great sangha of, monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha together with a great sangha of five hundred monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha, together with a great sangha of, bhutas',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in rajagrha on vulture peak mountain, together with a great sangha of, monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha, together with a great sangha of, monks',\n",
-       "  'homage to all buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha, together with a great sangha of, monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak mountain in rajagrha, together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha together with a great sangha of, monks,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in rajagrhas bamboo grove, together with a great sangha of five hundred monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha, together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak mountain in rajagrha together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in rajagrhas bamboo grove, together with a great sangha of, monks',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak in rajagrha, together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak in rajagrha together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha, together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in sravasti at vulture peak mountain together with a great sangha of,',\n",
-       "  'homage to all buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha, together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain together with a great sangha of, monks,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in rajagrhas bamboo grove, together with a great sangha of,',\n",
-       "  'homage to all buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in tusita on vulture peak mountain together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in rajagrhas bamboo grove together with a great sangha of,',\n",
-       "  'homage to all the oceanic buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain together with a great sangha of,',\n",
-       "  'homage to all buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha together with a great sangha of,',\n",
-       "  'homage to all buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in rajagrhas bamboo grove, together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain, together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was dwelling on vulture peak mountain together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain together with a great sangha of,',\n",
-       "  'homage to all buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain together with a great sangha of,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak mountain in rajagrha,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing in anathapindadas park at sravasti,',\n",
-       "  'homage to all the buddhas and bodhisattvas thus did i hear at one time the blessed one was residing on vulture peak in rajagrha,'])"
+       "  0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('།དབྱངས་ནི་ཀ་ཙ་ཊ་པ་ཏར་ལྡན་ཐྐ་ལ་སོགས་པ་ཡང་དག་སྦྱར་བ་རྣམས་ཀྱི་སྐྱེ་བའི་གནས།',\n",
+       " ['it is the birthplace of those who are endowed|-1.571793556213379',\n",
+       "  'it is the birthplace of those with vowels,|-1.596767544746399',\n",
+       "  'it is the abode of those who are endowed|-1.6090203523635864',\n",
+       "  'this is the birthplace of those who are endowed|-1.7143234014511108',\n",
+       "  'it is the birthplace of the voices of the|-1.744752049446106',\n",
+       "  'with melodious vowels and consonants,|-1.8429933786392212',\n",
+       "  'with melodious vowels and syllables,|-1.8628513813018799',\n",
+       "  'when the blessed one had spoken these words,|-1.9029614925384521',\n",
+       "  'it is the birthplace of verses such as the|-1.9125034809112549',\n",
+       "  'it is the birthplace of the vowels khad|-1.934617042541504',\n",
+       "  'it is the birthplace of those endowed with vo|-1.9740809202194214',\n",
+       "  'this place is the birthplace of the voices of|-2.030876636505127',\n",
+       "  'endowed with vowels and consonants, they|-2.0618646144866943',\n",
+       "  'endowed with vowels and consonants, the|-2.0735323429107666',\n",
+       "  'endowed with vowels and consonants such as|-2.0846288204193115',\n",
+       "  'when the blessed one had spoken these verses|-2.0856356620788574',\n",
+       "  'endowed with vowels and consonants, a|-2.1326849460601807',\n",
+       "  'endowed with vowels and consonants, it|-2.1720633506774902',\n",
+       "  'endowed with vowels and consonants, bh|-2.174595832824707',\n",
+       "  'endowed with vowels and consonants, ta|-2.1763198375701904',\n",
+       "  'endowed with vowels and consonants, there|-2.191694736480713',\n",
+       "  'endowed with vowels and consonants, where|-2.213728904724121',\n",
+       "  'it is the birthplace of vowels, lutes|-2.2262723445892334',\n",
+       "  'endowed with vowels and consonants, which|-2.2498700618743896',\n",
+       "  'there will be birthplaces where the voices of|-2.297382116317749',\n",
+       "  'with melodious vowels, lutes, and|-2.3073160648345947',\n",
+       "  'with melodious vowels and consonants such|-2.3094468116760254',\n",
+       "  'endowed with vowels and consonants, when|-2.3475143909454346',\n",
+       "  'endowed with vowels and consonants, in|-2.3547074794769287',\n",
+       "  'with melodious vowels and consonants in|-2.387004852294922',\n",
+       "  'endowed with vowels, lutes, and the|-2.4592320919036865',\n",
+       "  'with melodious vowels and syllables ta|-2.4809188842773438',\n",
+       "  'with melodious voices such as kausika,|-2.5202746391296387',\n",
+       "  'it is the birthplace of vowels and conson|-2.5760610103607178',\n",
+       "  'endowed with the melodious sounds of lutes|-2.604844331741333',\n",
+       "  'endowed with vowels and consonants, sh|-2.6083314418792725',\n",
+       "  'endowed with vowels, lutes, and so|-2.6179044246673584',\n",
+       "  'it is the birthplace of the vowels and con|-2.665966749191284',\n",
+       "  'homage to all buddhas and bodhisattvas|-2.697113275527954',\n",
+       "  'endowed with melodious vowels and conson|-2.761847734451294',\n",
+       "  'endowed with melodious vowels and syllab|-2.8187525272369385',\n",
+       "  'homage to all the buddhas, the blessed|-2.8304502964019775',\n",
+       "  'homage to all the buddhas, the perfect teachers|-2.830920934677124',\n",
+       "  'homage to all the buddhas, the supreme|-3.0541930198669434',\n",
+       "  'homage to the bhagavan tathagata vis|-3.2062413692474365',\n",
+       "  'homage to the bhagavan tathagata sak|-3.2285802364349365',\n",
+       "  'homage to all the buddhas and bodhisatt|-3.326355218887329',\n",
+       "  'homage to all the victors and bodhisatt|-3.3686275482177734',\n",
+       "  'homage to the bhagavan tathagata great|-3.3828415870666504',\n",
+       "  'homage to the bhagavan tathagata cloud|-3.421952486038208'])"
       ]
      },
      "execution_count": 15,
@@ -18036,7 +18063,10 @@
    ],
    "source": [
     "translator.num_beams = 50\n",
-    "# translator.add_score = True\n",
+    "translator.decoding_length = 15\n",
+    "translator.add_score = False\n",
+    "\n",
+    "# ls_logits_proc = LabelSmoothingLogitsProcessor(2)\n",
     "\n",
     "translations = translator.translate(\n",
     "    line,\n",
@@ -18044,7 +18074,7 @@
     "        'repetition_penalty': 2.2,\n",
     "        'no_repeat_ngram_size': 3,\n",
     "        'num_return_sequences': translator.num_beams,\n",
-    "        'logits_processor': LogitsProcessorList([ls_logits_proc]),\n",
+    "        # 'logits_processor': LogitsProcessorList([ls_logits_proc]),\n",
     "        # 'num_beam_groups': 25,\n",
     "        # 'diversity_penalty': 5.0,\n",
     "        # 'num_beam_groups': 5,\n",
@@ -18052,25 +18082,25 @@
     "    }\n",
     ")\n",
     "\n",
-    "# reranked = rerank(line, translations, reranker, num_return_sequences=translator.num_beams, add_scores=True)\n",
+    "reranked = rerank(line, translations, reranker, num_return_sequences=translator.num_beams, add_scores=True)\n",
     "\n",
-    "line, translations\n",
-    "# line, reranked"
+    "# line, translations\n",
+    "line, reranked"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "7e6aa3bf-3ebe-40a0-b5cd-d853af4c41d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'these and other such are the sequence for the usnisa circle, heart center, throat, crown protuberance, dark as snow or mount meru, and golden in color-to the eminent god of the skandhas and dwelling in the realms of the senses'"
+       "'it is the birthplace of those endowed with vowels and consonants|-0.638278603553772'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
